--- a/hybridse/examples/toydb/src/sdk/CMakeLists.txt
+++ b/hybridse/examples/toydb/src/sdk/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories(${INCLUDE_DIRECTORIES}
         ${PROJECT_BINARY_DIR}/src
 		${PROJECT_SOURCE_DIR}/examples/toydb/src)
 
-set(SDK_DEPS_LIBS hybridse_core hybridse_flags hybridse_sdk
+set(SDK_DEPS_LIBS hybridse_core hybridse_flags hybridse_sdk hybridse_global_variables
 	${yaml_libs} boost_filesystem ${VM_LIBS} ${LLVM_LIBS} ${BRPC_LIBS} ${OS_LIB})
 
 # split sdk test and bm
