build: add install target for openmldb
- default install to ${PROJECT_ROOT}/openmldb
- remove old install logical in hybridse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,3 +190,27 @@ include_directories(
 link_directories(${CMAKE_PREFIX_PATH}/lib ${CMAKE_PREFIX_PATH}/lib64)
 
 add_subdirectory(src)
+
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  # CMAKE_INSTALL_PREFIX default to /usr/local on unix.
+  # At current phase we'd like to change it to a customized directory by default
+  set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/openmldb" CACHE PATH "OpenMLDB install directory" FORCE)
+endif()
+
+message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+
+FILE(GLOB OPENMLDB_SCRIPTS "${CMAKE_SOURCE_DIR}/release/bin/*")
+FILE(GLOB OPENMLDB_CONFS "${CMAKE_SOURCE_DIR}/release/conf/*")
+FILE(GLOB OPENMLDB_TOOLS "${CMAKE_SOURCE_DIR}/tools/*")
+
+install(
+  FILES ${OPENMLDB_SCRIPTS}
+  TYPE BIN
+  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
+)
+install(FILES ${OPENMLDB_CONFS} DESTINATION conf)
+install(
+  FILES ${OPENMLDB_TOOLS}
+  DESTINATION tools
+  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
+)
