--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -99,25 +99,6 @@ jobs:
           MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
-      - name: Create Archive
-        if: ${{ github.event_name == 'push' }}
-        working-directory: ${{ env.HYBRIDSE_PATH }}
-        run: |
-          if [[ "${{ github.ref }}" == "refs/tags/hybridse-v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^hybridse-v//')
-            HYBRIDSE_VERSION=$VERSION ./tools/hybridse_deploy.sh
-          else
-            ./tools/hybridse_deploy.sh
-          fi
-
-      - name: Upload Artifacts
-        if: ${{ github.event_name == 'push' }}
-        uses: actions/upload-artifact@v2
-        with:
-          path: ${{ env.HYBRIDSE_PATH }}/hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
-          name: release-artifacts
-
   macos-build:
     name: Build in MacOS
     runs-on: macos-latest
@@ -142,9 +123,8 @@ jobs:
         uses: crazy-max/ghaction-import-gpg@v3
         with:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          # passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
-      - name: Install thirdparty
+      - name: Install dependencies
         run: |
           brew install coreutils
 
@@ -203,25 +183,6 @@ jobs:
           MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
-      - name: Create Archive
-        if: ${{ github.event_name == 'push' }}
-        working-directory: ${{ env.HYBRIDSE_PATH }}
-        run: |
-          if [[ "${{ github.ref }}" == "refs/tags/hybridse-v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^hybridse-v//')
-            HYBRIDSE_VERSION=$VERSION ./tools/hybridse_deploy.sh
-          else
-            ./tools/hybridse_deploy.sh
-          fi
-
-      - name: Upload Artifacts
-        if: ${{ github.event_name == 'push' }}
-        uses: actions/upload-artifact@v2
-        with:
-          path: ${{ env.HYBRIDSE_PATH }}/hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
-          name: release-artifacts
-
   java-allinone-deploy:
     runs-on: ubuntu-latest
     container:
@@ -256,13 +217,14 @@ jobs:
         with:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
 
-      - name: Build Core
+      - name: Build proto library
         run: |
-          make hybridse-build
+          make hybridse_proto
 
       - name: Copy Dylib
         run: |
           cp libhybridse_*.dylib ${{ env.HYBRIDSE_PATH }}/java/hybridse-native/src/main/resources/
+          cp libhybridse_*.so ${{ env.HYBRIDSE_PATH }}/java/hybridse-native/src/main/resources/
 
       - name: Prepare Maven Release Deploy
         if: startsWith(github.ref, 'refs/tags/hybridse-v')
@@ -282,26 +244,6 @@ jobs:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-
-  release:
-    runs-on: ubuntu-latest
-    needs: ["linux-build", "macos-build"]
-    if: >
-      success() && startsWith(github.ref, 'refs/tags/hybridse-v')
-    steps:
-      - name: Download Release Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: release-artifacts
-
-      - name: Release
-        if: ${{ startsWith(github.ref, 'refs/tags/hybridse-v') }}
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            hybridse-*.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-test-results:
     runs-on: ubuntu-latest
