--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,6 +22,7 @@ jobs:
       SQL_PYSDK_ENABLE: OFF
       SQL_JAVASDK_ENABLE: OFF
       TESTING_ENABLE: ON
+      TEST_LEVEL: 0
       NPROC: 4
     steps:
       - uses: actions/checkout@v2
@@ -55,60 +56,6 @@ jobs:
         run: |
           make test
 
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-${{ github.sha }}
-          path: |
-            reports/*.xml
-
-      - name: upload test binary
-        uses: actions/upload-artifact@v2
-        with:
-          path: |
-            build/bin/sql_sdk_test
-            build/bin/sql_cluster_test
-            build/bin/sql_standalone_sdk_test
-          name: test-artifacts
-
-      - name: install
-        run: |
-          make install
-
-      - name: package
-        if: ${{ github.event_name == 'push' }}
-        run: |
-          tar czf ${{ env.OPENMLDB_PREFIX }}.tar.gz ${{ env.OPENMLDB_PREFIX }}/
-
-      - name: upload artifacts
-        if: ${{ github.event_name == 'push' }}
-        uses: actions/upload-artifact@v2
-        with:
-          path: openmldb-*.tar.gz
-          name: release-artifacts
-
-  sql_mode_sdk_test:
-    runs-on: self-hosted
-    needs: build_and_cpp_ut
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    env:
-      TEST_LEVEL: 0
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: download test binary
-        uses: actions/download-artifact@v2
-        with:
-          name: test-artifacts
-          path: build
-
-      - name: download thirdsrc
-        run: |
-          make thirdparty-configure
-          cmake --build .deps --target zookeeper-install-src
-
       - name: run sql_sdk_test
         run: |
           bash steps/ut.sh sql_sdk_test ${TEST_LEVEL}
@@ -125,9 +72,25 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: linux-ut-result-${{ env.TEST_TARGET }}-${{ github.sha }}
+          name: linux-ut-result-cpp-${{ github.sha }}
           path: |
             reports/*.xml
+
+      - name: install
+        run: |
+          make install
+
+      - name: package
+        if: ${{ github.event_name == 'push' }}
+        run: |
+          tar czf ${{ env.OPENMLDB_PREFIX }}.tar.gz ${{ env.OPENMLDB_PREFIX }}/
+
+      - name: upload artifacts
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v2
+        with:
+          path: openmldb-*.tar.gz
+          name: release-artifacts
 
   java-sdk:
     runs-on: ubuntu-latest
@@ -200,7 +163,7 @@ jobs:
 
   publish-test-results:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
 
     # the action will only run on 4paradigm/OpenMLDB's context, not for fork repo or dependabot
     if: >
@@ -221,7 +184,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     # if test failed, shouldn't release
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -241,7 +204,7 @@ jobs:
   # only tag deploy, only run on 4paradigm/OpenMLDB's context?
   java-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     # java deploy is triggered with a push to main or a tag push
@@ -286,7 +249,7 @@ jobs:
   java-sdk-deploy-mac:
     runs-on: macos-latest
     # TODO(hw): needs ut on mac
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     # java deploy is triggered with a push to main or a tag push
     # a 'vX.Y.Z' tag push will deploy a release version to maven central,
     # any other push will deploy a SNAPSHOT version.
@@ -326,7 +289,7 @@ jobs:
 
   python-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
