--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -77,6 +77,7 @@ jobs:
             reports/*.xml
 
       - name: install
+        if: ${{ github.event_name == 'push' }}
         run: |
           make install
 
