refactor: move hybridse java from `hybridse-java` to `java`
resolve #674

--- a/hybridse/src/proto/CMakeLists.txt
+++ b/hybridse/src/proto/CMakeLists.txt
@@ -83,6 +83,8 @@ add_dependencies(hybridse_proto run_gen_proto)
 add_custom_target(hybridse_proto_java
     COMMAND ${Protobuf_PROTOC_EXECUTABLE}
         -I ${PROJECT_SOURCE_DIR}/src/proto
-        --java_out=${PROJECT_SOURCE_DIR}/java/hybridse-proto/src/main/java
-        ${PROJECT_SOURCE_DIR}/src/proto/*.proto)
+        --java_out=${CMAKE_SOURCE_DIR}/java/hybridse-proto/src/main/java
+        ${PROJECT_SOURCE_DIR}/src/proto/*.proto
+    COMMENT "Generating protobuf java class into ${CMAKE_SOURCE_DIR}/java/hybridse-proto/src/main/java"
+)
 
