--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -2,17 +2,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<parent>
-        <artifactId>hybridse-java</artifactId>
-        <groupId>com.4paradigm.hybridse</groupId>
-        <version>0.4.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-	</parent>
+    <parent>
+        <artifactId>openmldb-parent</artifactId>
+        <groupId>com.4paradigm.openmldb</groupId>
+	<version>0.4.0-SNAPSHOT</version>
+	<relativePath>../pom.xml</relativePath>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>hybridse-native</artifactId>
     <packaging>jar</packaging>
     <name>hybridse-native</name>
-    <version>${versionFromProfile}</version>
 
 	<profiles>
 		<profile>
