--- a/java/hybridse-proto/pom.xml
+++ b/java/hybridse-proto/pom.xml
@@ -2,8 +2,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hybridse-java</artifactId>
-        <groupId>com.4paradigm.hybridse</groupId>
+        <artifactId>openmldb-parent</artifactId>
+        <groupId>com.4paradigm.openmldb</groupId>
         <version>0.4.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -11,7 +11,6 @@
     <artifactId>hybridse-proto</artifactId>
     <packaging>jar</packaging>
     <name>hybridse-proto</name>
-    <version>${project.parent.version}</version>
 
     <dependencies>
         <dependency>
