--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -3,17 +3,16 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
-	<parent>
-        <artifactId>hybridse-java</artifactId>
-        <groupId>com.4paradigm.hybridse</groupId>
-        <version>0.4.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+  <parent>
+    <artifactId>openmldb-parent</artifactId>
+    <groupId>com.4paradigm.openmldb</groupId>
+    <version>0.4.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>hybridse-sdk</artifactId>
     <packaging>jar</packaging>
     <name>hybridse-sdk</name>
-    <version>${versionFromProfile}</version>
 
 	<profiles>
 		<profile>
@@ -77,11 +76,11 @@
             <scope>test</scope>
         </dependency>
 
-		<dependency>
-			<groupId>com.4paradigm.hybridse</groupId>
-			<artifactId>hybridse-native</artifactId>
-			<version>${versionFromProfile}</version>
-		</dependency>
+	<dependency>
+	  <groupId>com.4paradigm.hybridse</groupId>
+	  <artifactId>hybridse-native</artifactId>
+	  <version>${project.parent.version}</version>
+	</dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -98,18 +97,18 @@
     </dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok-maven-plugin</artifactId>
-				<version>1.16.8.0</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals><goal>delombok</goal></goals>
-					</execution>
-				</executions>
-			</plugin>
+	  <plugins>
+	    <plugin>
+	      <groupId>org.projectlombok</groupId>
+	      <artifactId>lombok-maven-plugin</artifactId>
+	      <version>1.16.8.0</version>
+	      <executions>
+		<execution>
+		  <phase>generate-sources</phase>
+		  <goals><goal>delombok</goal></goals>
+		</execution>
+	      </executions>
+	    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
