ci: fix coverage

--- a/hybridse/CMakeLists.txt
+++ b/hybridse/CMakeLists.txt
@@ -131,6 +131,7 @@ if (TESTING_ENABLE)
 endif ()
 if (COVERAGE_ENABLE)
     if (CMAKE_COMPILER_IS_GNUCXX)
+        find_program(LCOV_EXE NAMES lcov DOC "coverage requires lcov installed" REQUIRED)
         include(CodeCoverage)
         APPEND_COVERAGE_COMPILER_FLAGS()
     endif ()
