--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -187,7 +187,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
-    needs: ["macos-build"]
+    needs: ["macos-build", "linux-build"]
     if: >
       success() && github.event_name == 'push'
     steps:
