ci: update workflow trigger condition
cicd and coverage is heavy job, do not trigger it if that pr is e.g
only document change

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -7,6 +7,12 @@ on:
     tags:
       - v*
   pull_request:
+    paths-ignore:
+      - docs/
+      - demo/
+      - image/
+      - release/
+      - tools/
   workflow_dispatch:
 
 env:
