feat: add select all and columns

--- a/cases/plan/simple_query.yaml
+++ b/cases/plan/simple_query.yaml
@@ -16,6 +16,9 @@ cases:
   - id: 0
     desc: SELECT ALL
     sql: SELECT * FROM t1;
+  - id: all_and_other_column
+    desc: SELECT ALL and other column
+    sql: SELECT *, COL1 FROM t1;
   - id: 1
     desc: SELECT列
     sql: SELECT COL1, -COL1 FROM t1;
