refactor(build): update for coverage task
- the two copy native so (openmldb and hybridse), and 'hybridse_proto_java' task are not orphan,
  finally depended by 'sql_javasdk_package'
- those three job will re-run everty time, with `add_custom_target`

--- a/src/sdk/CMakeLists.txt
+++ b/src/sdk/CMakeLists.txt
@@ -149,15 +149,17 @@ if(SQL_JAVASDK_ENABLE)
         LINK_FLAGS "-flat_namespace -undefined suppress")
     endif()
 
-    add_custom_command(OUTPUT
-          cp_sql_resource
-          COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_SOURCE_DIR}/java/openmldb-native/src/main/resources
-          COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:sql_jsdk> ${PROJECT_SOURCE_DIR}/java/openmldb-native/src/main/resources/)
+    # this target ensure cpp compiled libraries were copied into java project:
+    # 1. cp sql_jsdk into openmldb-native
+    # 2. cp hybridse jsdk into hybridse-native (inside dependency cp_hybridse_native_so)
+    add_custom_target(cp_native_so ALL
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_SOURCE_DIR}/java/openmldb-native/src/main/resources
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:sql_jsdk> ${PROJECT_SOURCE_DIR}/java/openmldb-native/src/main/resources/
+        COMMENT "copy generated native library to java project")
+    add_dependencies(cp_native_so cp_hybridse_native_so)
+
     add_custom_target(sql_javasdk_package ALL
-      DEPENDS
-        sql_jsdk
-        cp_sql_resource
         COMMAND ${MAVEN_EXECUTABLE} package -DskipTests=true -Dscalatest.skip=true -Dwagon.skip=true -Dmaven.test.skip=true ${MAVEN_FLAGS}
-        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/java
-    )
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/java)
+    add_dependencies(sql_javasdk_package cp_native_so)
 endif()
