--- a/hybridse/src/sdk/CMakeLists.txt
+++ b/hybridse/src/sdk/CMakeLists.txt
@@ -58,7 +58,7 @@ if(JAVASDK_ENABLE)
 swig_add_library(hybridse_jsdk_core
         TYPE SHARED
         LANGUAGE java
-        OUTPUT_DIR ${PROJECT_SOURCE_DIR}/java/hybridse-native/src/main/java/com/_4paradigm/
+	OUTPUT_DIR ${CMAKE_SOURCE_DIR}/java/hybridse-native/src/main/java/com/_4paradigm/
         SOURCES hybridse_interface_core.i)
 target_include_directories(hybridse_jsdk_core PRIVATE ${JNI_INCLUDE_DIRS})
 target_compile_options(hybridse_jsdk_core PRIVATE -w)
@@ -74,7 +74,7 @@ if(SQL_JAVASDK_ENABLE)
 swig_add_library(hybridse_jsdk_core_static
 		TYPE STATIC
 		LANGUAGE java
-		OUTPUT_DIR ${PROJECT_SOURCE_DIR}/java/hybridse-native/src/main/java/com/_4paradigm/
+		OUTPUT_DIR ${CMAKE_SOURCE_DIR}/java/hybridse-native/src/main/java/com/_4paradigm/
 		SOURCES hybridse_interface_core.i)
 target_include_directories(hybridse_jsdk_core_static PRIVATE ${JNI_INCLUDE_DIRS})
 target_compile_options(hybridse_jsdk_core_static PRIVATE -w)
@@ -178,9 +178,10 @@ add_custom_target(python_package ALL
 endif()
 
 if(SQL_JAVASDK_ENABLE)
-  add_custom_command(
-    OUTPUT cp_java_native_so
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:hybridse_jsdk_core>
-    ${CMAKE_SOURCE_DIR}/java/hybridse-native/src/main/resources/
-  )
+  add_custom_target(
+    cp_hybridse_native_so ALL
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_SOURCE_DIR}/java/hybridse-native/src/main/resources/
+      COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:hybridse_jsdk_core> ${CMAKE_SOURCE_DIR}/java/hybridse-native/src/main/resources/
+    COMMENT "copy hybridse native so")
+  add_dependencies(cp_hybridse_native_so hybridse_proto_java)
 endif()
